Add: checkpoint feature

--- a/config/crd/v1/bases/velero.io_backups.yaml
+++ b/config/crd/v1/bases/velero.io_backups.yaml
@@ -471,6 +471,9 @@ spec:
                 items:
                   type: string
                 type: array
+              checkpoint:
+                description: Checkpoint is a bool value about whether to create a checkpoint file.
+                type: bool
             type: object
           status:
             description: BackupStatus captures the current status of a Velero backup.
